@@ -18,6 +18,7 @@ package org.springframework.boot.actuate.info;
 
 import java.util.LinkedHashMap;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.boot.actuate.endpoint.web.test.WebEndpointTest;
@@ -61,7 +62,7 @@ class InfoEndpointWebIntegrationTests {
 
 		@Bean
 		InfoEndpoint endpoint(ObjectProvider<InfoContributor> infoContributors) {
-			return new InfoEndpoint(infoContributors.orderedStream().toList());
+			return new InfoEndpoint(infoContributors.orderedStream().collect(Collectors.toList()));
 		}
 
 		@Bean
