@@ -69,7 +69,6 @@ import org.springframework.util.StringUtils;
  * @author Stephane Nicoll
  * @author Madhura Bhave
  * @author Moritz Halbritter
- * @author Scott Frederick
  * @since 1.3.0
  * @see EnableAutoConfiguration
  */
@@ -169,21 +168,33 @@ public class AutoConfigurationImportSelector implements DeferredImportSelector, 
 	}
 
 	/**
-	 * Return the auto-configuration class names that should be considered. By default,
-	 * this method will load candidates using {@link ImportCandidates}.
+	 * Return the auto-configuration class names that should be considered. By default
+	 * this method will load candidates using {@link ImportCandidates} with
+	 * {@link #getSpringFactoriesLoaderFactoryClass()}. For backward compatible reasons it
+	 * will also consider {@link SpringFactoriesLoader} with
+	 * {@link #getSpringFactoriesLoaderFactoryClass()}.
 	 * @param metadata the source metadata
 	 * @param attributes the {@link #getAttributes(AnnotationMetadata) annotation
 	 * attributes}
 	 * @return a list of candidate configurations
 	 */
 	protected List<String> getCandidateConfigurations(AnnotationMetadata metadata, AnnotationAttributes attributes) {
-		List<String> configurations = ImportCandidates.load(AutoConfiguration.class, getBeanClassLoader())
-			.getCandidates();
+		List<String> configurations = new ArrayList<>(
+				SpringFactoriesLoader.loadFactoryNames(getSpringFactoriesLoaderFactoryClass(), getBeanClassLoader()));
+		ImportCandidates.load(AutoConfiguration.class, getBeanClassLoader()).forEach(configurations::add);
 		Assert.notEmpty(configurations,
-				"No auto configuration classes found in "
-						+ "META-INF/spring/org.springframework.boot.autoconfigure.AutoConfiguration.imports. If you "
+				"No auto configuration classes found in META-INF/spring.factories nor in META-INF/spring/org.springframework.boot.autoconfigure.AutoConfiguration.imports. If you "
 						+ "are using a custom packaging, make sure that file is correct.");
 		return configurations;
+	}
+
+	/**
+	 * Return the class used by {@link SpringFactoriesLoader} to load configuration
+	 * candidates.
+	 * @return the factory class
+	 */
+	protected Class<?> getSpringFactoriesLoaderFactoryClass() {
+		return EnableAutoConfiguration.class;
 	}
 
 	private void checkExcludedClasses(List<String> configurations, Set<String> exclusions) {
@@ -290,17 +301,17 @@ public class AutoConfigurationImportSelector implements DeferredImportSelector, 
 
 	private void invokeAwareMethods(Object instance) {
 		if (instance instanceof Aware) {
-			if (instance instanceof BeanClassLoaderAware beanClassLoaderAwareInstance) {
-				beanClassLoaderAwareInstance.setBeanClassLoader(this.beanClassLoader);
+			if (instance instanceof BeanClassLoaderAware) {
+				((BeanClassLoaderAware) instance).setBeanClassLoader(this.beanClassLoader);
 			}
-			if (instance instanceof BeanFactoryAware beanFactoryAwareInstance) {
-				beanFactoryAwareInstance.setBeanFactory(this.beanFactory);
+			if (instance instanceof BeanFactoryAware) {
+				((BeanFactoryAware) instance).setBeanFactory(this.beanFactory);
 			}
-			if (instance instanceof EnvironmentAware environmentAwareInstance) {
-				environmentAwareInstance.setEnvironment(this.environment);
+			if (instance instanceof EnvironmentAware) {
+				((EnvironmentAware) instance).setEnvironment(this.environment);
 			}
-			if (instance instanceof ResourceLoaderAware resourceLoaderAwareInstance) {
-				resourceLoaderAwareInstance.setResourceLoader(this.resourceLoader);
+			if (instance instanceof ResourceLoaderAware) {
+				((ResourceLoaderAware) instance).setResourceLoader(this.resourceLoader);
 			}
 		}
 	}
@@ -451,7 +462,7 @@ public class AutoConfigurationImportSelector implements DeferredImportSelector, 
 
 			return sortAutoConfigurations(processedConfigurations, getAutoConfigurationMetadata()).stream()
 				.map((importClassName) -> new Entry(this.entries.get(importClassName), importClassName))
-				.toList();
+				.collect(Collectors.toList());
 		}
 
 		private AutoConfigurationMetadata getAutoConfigurationMetadata() {
