@@ -22,12 +22,11 @@ import java.io.FileInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.nio.file.attribute.PosixFilePermission;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.LinkedHashSet;
@@ -39,6 +38,7 @@ import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 import java.util.jar.JarOutputStream;
 import java.util.jar.Manifest;
+import java.util.stream.Collectors;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipInputStream;
 
@@ -69,7 +69,6 @@ import org.junit.jupiter.api.io.TempDir;
 import org.springframework.boot.gradle.junit.GradleProjectBuilder;
 import org.springframework.boot.loader.tools.DefaultLaunchScript;
 import org.springframework.boot.loader.tools.JarModeLibrary;
-import org.springframework.util.FileCopyUtils;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
@@ -132,42 +131,6 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 				.isEqualTo(this.classesPath);
 			assertThat(jarFile.getManifest().getMainAttributes().getValue("Spring-Boot-Lib")).isEqualTo(this.libPath);
 			assertThat(jarFile.getManifest().getMainAttributes().getValue("Spring-Boot-Version")).isNotNull();
-			assertThat(jarFile.getManifest().getMainAttributes().getValue("Implementation-Title"))
-				.isEqualTo(this.project.getName());
-			assertThat(jarFile.getManifest().getMainAttributes().getValue("Implementation-Version")).isNull();
-		}
-	}
-
-	@Test
-	void whenImplementationNameIsCustomizedItShouldAppearInArchiveManifest() throws IOException {
-		this.task.getMainClass().set("com.example.Main");
-		this.task.getManifest().getAttributes().put("Implementation-Title", "Customized");
-		executeTask();
-		try (JarFile jarFile = new JarFile(this.task.getArchiveFile().get().getAsFile())) {
-			assertThat(jarFile.getManifest().getMainAttributes().getValue("Implementation-Title"))
-				.isEqualTo("Customized");
-		}
-	}
-
-	@Test
-	void whenProjectVersionIsSetThenImplementationVersionShouldAppearInArchiveManifest() throws IOException {
-		this.project.setVersion("1.0.0");
-		this.task.getMainClass().set("com.example.Main");
-		executeTask();
-		try (JarFile jarFile = new JarFile(this.task.getArchiveFile().get().getAsFile())) {
-			assertThat(jarFile.getManifest().getMainAttributes().getValue("Implementation-Version")).isEqualTo("1.0.0");
-		}
-	}
-
-	@Test
-	void whenImplementationVersionIsCustomizedItShouldAppearInArchiveManifest() throws IOException {
-		this.project.setVersion("1.0.0");
-		this.task.getMainClass().set("com.example.Main");
-		this.task.getManifest().getAttributes().put("Implementation-Version", "Customized");
-		executeTask();
-		try (JarFile jarFile = new JarFile(this.task.getArchiveFile().get().getAsFile())) {
-			assertThat(jarFile.getManifest().getMainAttributes().getValue("Implementation-Version"))
-				.isEqualTo("Customized");
 		}
 	}
 
@@ -333,11 +296,11 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 	void customLaunchScriptCanBePrepended() throws IOException {
 		this.task.getMainClass().set("com.example.Main");
 		File customScript = new File(this.temp, "custom.script");
-		Files.writeString(customScript.toPath(), "custom script", StandardOpenOption.CREATE);
+		Files.write(customScript.toPath(), Arrays.asList("custom script"), StandardOpenOption.CREATE);
 		this.task.launchScript((configuration) -> configuration.setScript(customScript));
 		executeTask();
-		Path path = this.task.getArchiveFile().get().getAsFile().toPath();
-		assertThat(Files.readString(path, StandardCharsets.ISO_8859_1)).startsWith("custom script");
+		assertThat(Files.readAllBytes(this.task.getArchiveFile().get().getAsFile().toPath()))
+			.startsWith("custom script".getBytes());
 	}
 
 	@Test
@@ -349,11 +312,10 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 			configuration.getProperties().put("initInfoDescription", "description");
 		});
 		executeTask();
-		Path path = this.task.getArchiveFile().get().getAsFile().toPath();
-		String content = Files.readString(path, StandardCharsets.ISO_8859_1);
-		assertThat(content).containsSequence("Provides:          provides");
-		assertThat(content).containsSequence("Short-Description: short description");
-		assertThat(content).containsSequence("Description:       description");
+		byte[] bytes = Files.readAllBytes(this.task.getArchiveFile().get().getAsFile().toPath());
+		assertThat(bytes).containsSequence("Provides:          provides".getBytes());
+		assertThat(bytes).containsSequence("Short-Description: short description".getBytes());
+		assertThat(bytes).containsSequence("Description:       description".getBytes());
 	}
 
 	@Test
@@ -490,8 +452,7 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 
 	@Test
 	void jarWhenLayersDisabledShouldNotContainLayersIndex() throws IOException {
-		List<String> entryNames = getEntryNames(
-				createLayeredJar((configuration) -> configuration.getEnabled().set(false)));
+		List<String> entryNames = getEntryNames(createLayeredJar((configuration) -> configuration.setEnabled(false)));
 		assertThat(entryNames).doesNotContain(this.indexPath + "layers.idx");
 	}
 
@@ -523,7 +484,6 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 			expected.add("- \"dependencies\":");
 			expected.add("  - \"" + this.libPath + "first-library.jar\"");
 			expected.add("  - \"" + this.libPath + "first-project-library.jar\"");
-			expected.add("  - \"" + this.libPath + "fourth-library.jar\"");
 			expected.add("  - \"" + this.libPath + "second-library.jar\"");
 			if (!layerToolsJar.contains("SNAPSHOT")) {
 				expected.add("  - \"" + layerToolsJar + "\"");
@@ -559,8 +519,7 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 				dependencies.intoLayer("my-internal-deps", (spec) -> spec.include("com.example:*:*"));
 				dependencies.intoLayer("my-deps");
 			});
-			layered.getLayerOrder()
-				.set(List.of("my-deps", "my-internal-deps", "my-snapshot-deps", "resources", "application"));
+			layered.setLayerOrder("my-deps", "my-internal-deps", "my-snapshot-deps", "resources", "application");
 		});
 		try (JarFile jarFile = new JarFile(jar)) {
 			List<String> entryNames = getEntryNames(jar);
@@ -579,7 +538,6 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 			expected.add("- \"my-internal-deps\":");
 			expected.add("  - \"" + this.libPath + "first-library.jar\"");
 			expected.add("  - \"" + this.libPath + "first-project-library.jar\"");
-			expected.add("  - \"" + this.libPath + "fourth-library.jar\"");
 			expected.add("  - \"" + this.libPath + "second-library.jar\"");
 			expected.add("- \"my-snapshot-deps\":");
 			expected.add("  - \"" + this.libPath + "second-project-library-SNAPSHOT.jar\"");
@@ -608,7 +566,7 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 	@Test
 	void whenArchiveIsLayeredAndIncludeLayerToolsIsFalseThenLayerToolsAreNotAddedToTheJar() throws IOException {
 		List<String> entryNames = getEntryNames(
-				createLayeredJar((configuration) -> configuration.getIncludeLayerTools().set(false)));
+				createLayeredJar((configuration) -> configuration.setIncludeLayerTools(false)));
 		assertThat(entryNames)
 			.doesNotContain(this.indexPath + "layers/dependencies/lib/spring-boot-jarmode-layertools.jar");
 	}
@@ -660,43 +618,27 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 	}
 
 	File createLayeredJar() throws IOException {
-		return createLayeredJar(false);
-	}
-
-	File createLayeredJar(boolean addReachabilityProperties) throws IOException {
-		return createLayeredJar(addReachabilityProperties, (spec) -> {
+		return createLayeredJar((spec) -> {
 		});
 	}
 
 	File createLayeredJar(Action<LayeredSpec> action) throws IOException {
-		return createLayeredJar(false, action);
-	}
-
-	File createLayeredJar(boolean addReachabilityProperties, Action<LayeredSpec> action) throws IOException {
 		applyLayered(action);
-		addContent(addReachabilityProperties);
+		addContent();
 		executeTask();
 		return getTask().getArchiveFile().get().getAsFile();
 	}
 
 	File createPopulatedJar() throws IOException {
-		return createPopulatedJar(false);
-	}
-
-	File createPopulatedJar(boolean addReachabilityProperties) throws IOException {
-		addContent(addReachabilityProperties);
+		addContent();
 		executeTask();
 		return getTask().getArchiveFile().get().getAsFile();
 	}
 
 	abstract void applyLayered(Action<LayeredSpec> action);
 
-	void addContent() throws IOException {
-		addContent(false);
-	}
-
 	@SuppressWarnings("unchecked")
-	void addContent(boolean addReachabilityProperties) throws IOException {
+	void addContent() throws IOException {
 		this.task.getMainClass().set("com.example.Main");
 		File classesJavaMain = new File(this.temp, "classes/java/main");
 		File applicationClass = new File(classesJavaMain, "com/example/Application.class");
@@ -710,20 +652,14 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 		staticResources.mkdir();
 		File css = new File(staticResources, "test.css");
 		css.createNewFile();
-		if (addReachabilityProperties) {
-			createReachabilityProperties(resourcesMain, "com.example", "first-library", "1.0.0", "true");
-			createReachabilityProperties(resourcesMain, "com.example", "second-library", "1.0.0", "true");
-			createReachabilityProperties(resourcesMain, "com.example", "fourth-library", "1.0.0", "false");
-		}
 		this.task.classpath(classesJavaMain, resourcesMain, jarFile("first-library.jar"), jarFile("second-library.jar"),
-				jarFile("third-library-SNAPSHOT.jar"), jarFile("fourth-library.jar"),
-				jarFile("first-project-library.jar"), jarFile("second-project-library-SNAPSHOT.jar"));
+				jarFile("third-library-SNAPSHOT.jar"), jarFile("first-project-library.jar"),
+				jarFile("second-project-library-SNAPSHOT.jar"));
 		Set<ResolvedArtifact> artifacts = new LinkedHashSet<>();
 		artifacts.add(mockLibraryArtifact("first-library.jar", "com.example", "first-library", "1.0.0"));
 		artifacts.add(mockLibraryArtifact("second-library.jar", "com.example", "second-library", "1.0.0"));
 		artifacts
 			.add(mockLibraryArtifact("third-library-SNAPSHOT.jar", "com.example", "third-library", "1.0.0.SNAPSHOT"));
-		artifacts.add(mockLibraryArtifact("fourth-library.jar", "com.example", "fourth-library", "1.0.0"));
 		artifacts
 			.add(mockProjectArtifact("first-project-library.jar", "com.example", "first-project-library", "1.0.0"));
 		artifacts.add(mockProjectArtifact("second-project-library-SNAPSHOT.jar", "com.example",
@@ -746,15 +682,6 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 		}).given(resolvableDependencies).afterResolve(any(Action.class));
 		given(configuration.getIncoming()).willReturn(resolvableDependencies);
 		populateResolvedDependencies(configuration);
-	}
-
-	protected void createReachabilityProperties(File directory, String groupId, String artifactId, String version,
-			String override) throws IOException {
-		File targetDirectory = new File(directory,
-				"META-INF/native-image/%s/%s/%s".formatted(groupId, artifactId, version));
-		File target = new File(targetDirectory, "reachability-metadata.properties");
-		targetDirectory.mkdirs();
-		FileCopyUtils.copy("override=%s\n".formatted(override).getBytes(StandardCharsets.ISO_8859_1), target);
 	}
 
 	abstract void populateResolvedDependencies(Configuration configuration);
@@ -794,7 +721,7 @@ abstract class AbstractBootArchiveTests<T extends Jar & BootArchive> {
 	List<String> entryLines(JarFile jarFile, String entryName) throws IOException {
 		try (BufferedReader reader = new BufferedReader(
 				new InputStreamReader(jarFile.getInputStream(jarFile.getEntry(entryName))))) {
-			return reader.lines().toList();
+			return reader.lines().collect(Collectors.toList());
 		}
 	}
 
